# systemd-timer-generator

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/: main.yml
.github/workflows/: main.yml
systemd_generator/: __init__.py
