[tool.poetry]
name = "generate-systemd-timer"
version = "0.1.3"
description = "Generate a systemd unit.timer and unit.service pair"
license = "MIT"
authors = [
    "Thom Wiggers <thom@thomwiggers.nl>",
]

readme = "README.md"

repository = "https://github.com/thomwiggers/systemd-timer-generator"

packages = [
    { include = "systemd_generator" },
]

[tool.poetry.dependencies]
python = ">=3.8"
jinja2 = "^3"
python-editor = "^1.0"
setuptools = "^70.3.0"

[tool.poetry.scripts]
generate-systemd-timer = 'systemd_generator:main'

[tool.poetry.group.dev.dependencies]
twine = ">=4.0.2,<6.0.0"
